delete history and move code to home
